trying to fix overflow issues in gallery page

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -73,3 +73,19 @@
     font-size: 0.8rem;
   }
 }
+
+@media screen and (max-width: 400px) {
+  .footer {
+    .footer_wrapper {
+      .footer_logo {
+        img {
+          width: 50px;
+          height: auto;
+        }
+      }
+      .footer_links {
+        font-size: 0.5rem;
+      }
+    }
+  }
+}
