--- a/src/components/Trainee/Trainee.module.scss
+++ b/src/components/Trainee/Trainee.module.scss
@@ -6,13 +6,14 @@
   display: flex;
   flex-direction: column;
   height: 400px;
-  width: 80%;
+  width: 100%;
   text-align: center;
   margin: auto;
 
   .imageContainer {
     display: flex;
-    width: 240px;
+    width: 220px;
+    height: 220px;
     margin: 0 auto;
     position: relative;
     justify-content: center;
@@ -21,7 +22,6 @@
       display: block;
       width: 100%;
       border-radius: 50%;
-      height: auto;
     }
 
     .imageOverlay {
