--- a/src/containers/Gallery/Gallery.module.scss
+++ b/src/containers/Gallery/Gallery.module.scss
@@ -23,3 +23,16 @@ hr {
   margin: auto;
   margin-bottom: 150px;
 }
+
+@media screen and (max-width: 800px) {
+
+  .gallery_heading {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    font-size: 2.3rem;
+    width: 90%;
+    margin: 0 auto;
+  }
+
+}
